test/e2e/features/extauth/testdata/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kgateway-base
  name: hey-its-a-route
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        # shared base echo backend deployed by the suite runner
        - name: backend
          port: 80
