test/e2e/features/extauth/testdata/secure-and-disable-all.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kgateway-base
  name: route-example-disableall
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "disableall.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  namespace: kgateway-base
  name: insecure-route-policy2
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-example-disableall
  extAuth:
    disable: {} 
---
## On a route that is not part of the gw gateway opt in
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  namespace: kgateway-base
  name: secure-route-policy2
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-example-disableall
  extAuth:
    extensionRef: 
      name: basic-extauth2
