test/e2e/features/extauth/testdata/secured-gateway-policy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kgateway-base
  name: route-example-default
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "securegateways.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  namespace: kgateway-base
  name: gw-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  extAuth:
    extensionRef: 
      name: basic-extauth
