test/e2e/features/extauth/testdata/secured-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kgateway-base
  name: route-example-secure
spec:
  parentRefs:
    - name: gateway
      namespace: kgateway-base
  hostnames:
    - "secureroute.com"
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
## On a route that is not part of the gw gateway opt in
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  namespace: kgateway-base
  name: secure-route-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: route-example-secure
  extAuth:
    extensionRef: 
      name: basic-extauth2
